--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#">Tu Nombre/Marca</a>
+                <a href="#">Tu mundo en otra dimension</a>
             </div>
             <nav>
                 <ul>
