--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <div class="container">
             <h2>Sobre Mí</h2>
             <img src="images/tu-foto.jpg" alt="Tu Foto Profesional" class="profile-pic">
-            <p>Hola, soy [Tu Nombre] y soy un apasionado del diseño 3D con [X años] de experiencia en la creación de visualizaciones de alta calidad. Mi objetivo es ayudarte a presentar tus ideas de la manera más atractiva y realista posible, utilizando las últimas herramientas y técnicas en renderizado y modelado 3D.</p>
-            <p>He trabajado en proyectos para [Menciona algunos sectores o tipos de clientes], entregando resultados que superan las expectativas y contribuyen al éxito visual de mis clientes.</p>
+            <p>Hola, soy Jonathan y soy un apasionado del diseño 3D con mas de 5 años de experiencia en la creación de visualizaciones de alta calidad. Mi objetivo es ayudarte a presentar tus ideas de la manera más atractiva y realista posible, utilizando las últimas herramientas y técnicas en renderizado y modelado 3D.</p>
+            <p>He trabajado en proyectos para fabricas y distribuidores de iluminacion y arquitectos, entregando resultados que superan las expectativas y contribuyen al éxito visual de mis clientes.</p>
         </div>
     </section>
 
