--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Nombre - Portafolio de Diseño 3D</title>
+    <title>Tu mundo en otra dimension</title>
     <meta name="description" content="Portafolio profesional de diseño 3D especializado en visualización de productos, ambientes, arquitectura y más.">
     
     <!-- Enlace a tu archivo CSS -->
