--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p>Visualización 3D de una cocina con acabados de lujo y diseño minimalista para un cliente de arquitectura.</p>
                     <div class="sketchfab-embed-container">
                         <!-- Reemplaza "SKETCHFAB_MODEL_ID_2" con el ID real de tu modelo de Sketchfab -->
-                        <iframe title="Cocina Minimalista" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/SKETCHFAB_MODEL_ID_2/embed?autostart=0&preload=1"></iframe>
+                        <iframe title="Cocina Minimalista" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/7acc2cb533234488bfe6703df4a96011/embed"></iframe>
                     </div>
                     <a href="#" class="btn-small">Ver Más Detalles</a>
                 </div>
