--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <div class="sketchfab-embed-container">
                         <!-- Reemplaza "SKETCHFAB_MODEL_ID_1" con el ID real de tu modelo de Sketchfab -->
                         <iframe title="Silla Ergonómica" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/SKETCHFAB_MODEL_ID_1/embed?autostart=0&preload=1"></iframe>
-                    </div>
-                    <a href="#" class="btn-small">Ver Más Detalles</a> <!-- Puedes enlazar a una página de proyecto si la creas -->
+                   <!-- </div>
+                    <a href="#" class="btn-small">Ver Más Detalles</a>  Puedes enlazar a una página de proyecto si la creas -->
                 </div>
 
                 <!-- PROYECTO 2: Ambiente/Interior -->
@@ -67,7 +67,7 @@
                         <!-- Reemplaza "SKETCHFAB_MODEL_ID_2" con el ID real de tu modelo de Sketchfab -->
                         <iframe title="Cocina Minimalista" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/7acc2cb533234488bfe6703df4a96011/embed"></iframe>
                     </div>
-                    <a href="#" class="btn-small">Ver Más Detalles</a>
+                  <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
                 </div>
 
                 <!-- PROYECTO 3: Fachada/Arquitectura -->
@@ -78,8 +78,8 @@
                     <div class="sketchfab-embed-container">
                         <!-- Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab -->
                         <iframe title="Edificio Corporativo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/SKETCHFAB_MODEL_ID_3/embed?autostart=0&preload=1"></iframe>
-                    </div>
-                    <a href="#" class="btn-small">Ver Más Detalles</a>
+                    <!-- </div>
+                    <a href="#" class="btn-small">Ver Más Detalles</a>-->
                 </div>
 
             </div>
