--- a/index.html
+++ b/index.html
@@ -86,23 +86,26 @@
         </div>
     </section>
 
-    <section id="services" class="services-section">
+  <section id="services" class="services-section">
         <div class="container">
             <h2>Mis Servicios</h2>
             <div class="services-grid">
-                <div class="service-item">
+                <!-- Primera Fila -->
+                <div class="service-item wide-item">
                     <h3>Renders Fotorrealistas de Productos</h3>
                     <p>Crea imágenes impactantes de tus productos antes de la producción, perfectas para e-commerce y marketing.</p>
                 </div>
-                <div class="service-item">
+                <div class="service-item wide-item">
                     <h3>Visualización Arquitectónica</h3>
                     <p>Desde fachadas hasta interiores, da vida a tus proyectos arquitectónicos con renders y animaciones.</p>
                 </div>
-                <div class="service-item">
+
+                <!-- Segunda Fila -->
+                <div class="service-item wide-item">
                     <h3>Diseño y Visualización de Interiores</h3>
                     <p>Diseña y muestra ambientes amueblados con un realismo asombroso, ideal para promotoras y diseñadores.</p>
                 </div>
-                <div class="service-item">
+                <div class="service-item wide-item">
                     <h3>Animación y Recorridos 3D</h3>
                     <p>Videos dinámicos que guían a tus clientes a través de espacios o muestran tu producto en acción.</p>
                 </div>
