--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Tu Nombre/Marca. Todos los derechos reservados.</p>
+            <p>&copy; -</p>
         </div>
     </footer>
 
