--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#">Tu mundo en otra dimension</a>
+                <a href="#home">
+                    <img src="images/logo.png" alt="Tu mundo en otra dimension" class="site-logo">
+                </a>
             </div>
             <nav>
                 <ul>
