--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#home">
-                    <img src="images/logo.png" alt="Tu mundo en otra dimension" class="site-logo">
-                </a>
+                <a href="#">Tu mundo en otra dimension</a>
             </div>
             <nav>
                 <ul>
