--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 
                 <!-- PROYECTO 1: Producto -->
                 <div class="portfolio-item">
-                    <img src="images/producto-silla.jpg" alt="Render de Silla de Diseño">
+                    <img src="images/mate.jpg" alt="Render de Silla de Diseño">
                     <h3>Visualización de Producto: Silla Ergonómica</h3>
                     <p>Renders de alta calidad para un catálogo de mobiliario moderno, destacando texturas y materiales.</p>
                     <div class="sketchfab-embed-container">
