--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <h3>Visualización de Producto: Silla Ergonómica</h3>
                     <p>Renders de alta calidad para un catálogo de mobiliario moderno, destacando texturas y materiales.</p>
                     <div class="sketchfab-embed-container">
-                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_1" con el ID real de tu modelo de Sketchfab -->
+                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_1" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Silla Ergonómica" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/SKETCHFAB_MODEL_ID_1/embed?autostart=0&preload=1"></iframe>
-                    </div>
+                    --></div>
                     <!--<a href="#" class="btn-small">Ver Más Detalles</a>  Puedes enlazar a una página de proyecto si la creas -->
                 </div>
 
@@ -64,9 +64,9 @@
                     <h3>Diseño de Interiores: Cocina Minimalista</h3>
                     <p>Visualización 3D de una cocina con acabados de lujo y diseño minimalista para un cliente de arquitectura.</p>
                     <div class="sketchfab-embed-container">
-                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_2" con el ID real de tu modelo de Sketchfab -->
+                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_2" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Cocina Minimalista" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/7acc2cb533234488bfe6703df4a96011/embed"></iframe>
-                    </div>
+                    --></div>
                   <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
                 </div>
 
@@ -76,9 +76,9 @@
                     <h3>Visualización Arquitectónica: Edificio Corporativo</h3>
                     <p>Propuesta de fachada para un edificio de oficinas, integrando elementos naturales y tecnología.</p>
                     <div class="sketchfab-embed-container">
-                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab -->
+                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Edificio Corporativo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/SKETCHFAB_MODEL_ID_3/embed?autostart=0&preload=1"></iframe>
-                    </div>
+                    --></div>
                    <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
                 </div>
 
