--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <img src="images/mate.jpg" alt="Render de Silla de Diseño">
                     <h3>Visualización 3D de productos</h3>
                     <p>Renders de alta calidad para un catálogo de productos modernos, destacando texturas y materiales.</p>
-                   <!--  <div class="sketchfab-embed-container">
-                        Reemplaza "SKETCHFAB_MODEL_ID_1" con el ID real de tu modelo de Sketchfab 
+                     <div class="sketchfab-embed-container">
+                        <!--Reemplaza "SKETCHFAB_MODEL_ID_1" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Silla Ergonómica" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/SKETCHFAB_MODEL_ID_1/embed?autostart=0&preload=1"></iframe>
                     --></div>
                     <!--<a href="#" class="btn-small">Ver Más Detalles</a>  Puedes enlazar a una página de proyecto si la creas -->
@@ -63,8 +63,8 @@
                     <img src="images/ambiente-cocina.jpg" alt="Render de Cocina Moderna">
                     <h3>Diseño de Interiores</h3>
                     <p>Visualiza tu ambiente con acabados de lujo.</p>
-                   <!-- <div class="sketchfab-embed-container">
-                         Reemplaza "SKETCHFAB_MODEL_ID_2" con el ID real de tu modelo de Sketchfab 
+                    <div class="sketchfab-embed-container">
+                         <!--Reemplaza "SKETCHFAB_MODEL_ID_2" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Cocina Minimalista" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/7acc2cb533234488bfe6703df4a96011/embed"></iframe>
                     --></div>
                   <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
@@ -75,8 +75,8 @@
                     <img src="images/fachada-edificio.jpg" alt="Render de Fachada de Edificio Moderno">
                     <h3>Visualización Arquitectónica</h3>
                     <p>Propuesta de fachada para un edificio de oficinas, integrando elementos naturales y tecnología.</p>
-                    <!--<div class="sketchfab-embed-container">
-                         Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab 
+                    <div class="sketchfab-embed-container">
+                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Edificio Corporativo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/SKETCHFAB_MODEL_ID_3/embed?autostart=0&preload=1"></iframe>
                     --></div>
                    <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
