--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
             <a href="#portfolio" class="btn">Ver Portafolio</a>
         </div>
     </section>
-
+<!-- Contenedor para el modelo 3D flotante -->
+    <div id="product-3d-container">
+        <!-- El modelo 3D se renderizará aquí por JavaScript -->
+    </div>
     <section id="portfolio" class="portfolio-section">
         <div class="container">
             <h2>Mi Portafolio</h2>
