--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 <!-- PROYECTO 3: Fachada/Arquitectura -->
                 <div class="portfolio-item">
-                    <img src="images/fachada-edificio.jpg" alt="Render de Fachada de Edificio Moderno">
+                    <img src="images/fachada-edificio.png" alt="Render de Fachada de Edificio Moderno">
                     <h3>Visualización Arquitectónica</h3>
                     <p>Propuesta de fachada para un edificio de oficinas, integrando elementos naturales y tecnología.</p>
                     <div class="sketchfab-embed-container">
