--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                     <h3>Visualización Arquitectónica</h3>
                     <p>Propuesta de fachada para un edificio de oficinas, integrando elementos naturales y tecnología.</p>
                     <div class="sketchfab-embed-container">
-                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab 
-                        <iframe title="Edificio Corporativo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/SKETCHFAB_MODEL_ID_3/embed?autostart=0&preload=1"></iframe>
-                    --></div>
+                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab  -->
+                        <iframe title="Edificio Corporativo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/2301b7e5509c4316b6f8b6a982c457d5/embed?autostart=0&preload=1"></iframe>
+                   </div>
                    <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
                 </div>
 
