--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <!-- PROYECTO 2: Ambiente/Interior -->
                 <div class="portfolio-item">
-                    <img src="images/ambiente-cocina.jpg" alt="Render de Cocina Moderna">
+                    <img src="images/ambiente-cocina.png" alt="Render de Cocina Moderna">
                     <h3>Diseño de Interiores</h3>
                     <p>Visualiza tu ambiente con acabados de lujo.</p>
                     <div class="sketchfab-embed-container">
