--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <h3>Visualización 3D de productos</h3>
                     <p>Renders de alta calidad para un catálogo de productos modernos, destacando texturas y materiales.</p>
                      <div class="sketchfab-embed-container">
-                        <!--Reemplaza "SKETCHFAB_MODEL_ID_1" con el ID real de tu modelo de Sketchfab -->
+                        <!--Reemplaza "SKETCHFAB_MODEL_ID_1" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Silla Ergonómica" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/f3471cfbb56446429921b56cad6f6ee7/embed?autostart=0&preload=1"></iframe>
-                    </div>
+                   --> </div>
                     <!--<a href="#" class="btn-small">Ver Más Detalles</a>  Puedes enlazar a una página de proyecto si la creas -->
                 </div>
 
@@ -71,7 +71,7 @@
                         <iframe title="Cocina Minimalista" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/7acc2cb533234488bfe6703df4a96011/embed"></iframe>
                     --></div>
                   <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
-                </div>
+                
 
                 <!-- PROYECTO 3: Fachada/Arquitectura -->
                 <div class="portfolio-item">
