--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                      <div class="sketchfab-embed-container">
                         <!--Reemplaza "SKETCHFAB_MODEL_ID_1" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Silla Ergonómica" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/f3471cfbb56446429921b56cad6f6ee7/embed?autostart=0&preload=1"></iframe>
-                   --> </div>
+                    </div>-->
                     <!--<a href="#" class="btn-small">Ver Más Detalles</a>  Puedes enlazar a una página de proyecto si la creas -->
                 </div>
 
@@ -69,7 +69,7 @@
                     <div class="sketchfab-embed-container">
                          <!--Reemplaza "SKETCHFAB_MODEL_ID_2" con el ID real de tu modelo de Sketchfab 
                         <iframe title="Cocina Minimalista" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/7acc2cb533234488bfe6703df4a96011/embed"></iframe>
-                    --></div>
+                    </div>-->
                   <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
                 
 
@@ -79,9 +79,9 @@
                     <h3>Visualización Arquitectónica</h3>
                     <p>Propuesta de fachada para un edificio de oficinas, integrando elementos naturales y tecnología.</p>
                     <div class="sketchfab-embed-container">
-                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab  -->
+                        <!-- Reemplaza "SKETCHFAB_MODEL_ID_3" con el ID real de tu modelo de Sketchfab  
                         <iframe title="Edificio Corporativo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/2301b7e5509c4316b6f8b6a982c457d5/embed?autostart=0&preload=1"></iframe>
-                   </div>
+                  </div>--> 
                    <!--  <a href="#" class="btn-small">Ver Más Detalles</a>-->
                 </div>
 
