--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
                     <!-- PROYECTO 2: Ambiente/Interior -->
                     <div class="swiper-slide portfolio-item">
-                        <img src="images/ambiente-cocina.jpg" alt="Render de Cocina Moderna">
+                        <img src="images/ambiente-cocina.png" alt="Render de Cocina Moderna">
                         <h3>Diseño de Interiores</h3>
                         <p>Visualiza tu ambiente con acabados de lujo.</p>
                     </div>
 
                     <!-- PROYECTO 3: Fachada/Arquitectura -->
                     <div class="swiper-slide portfolio-item">
-                        <img src="images/fachada-edificio.jpg" alt="Render de Fachada de Edificio Moderno">
+                        <img src="images/fachada-edificio.png" alt="Render de Fachada de Edificio Moderno">
                         <h3>Visualización Arquitectónica</h3>
                         <p>Propuesta de fachada para un edificio de oficinas, integrando elementos naturales y tecnología.</p>
                     </div>
