--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                     <!-- PROYECTO 1: Producto -->
                     <div class="swiper-slide portfolio-item">
                         <img src="images/mate.jpg" alt="Render de Mate con Bombilla"> <!-- Alt text más descriptivo -->
-                        <h3>Visualización 3D de productos</h3>
+                        <h3>Visualización 3D de Productos</h3>
                         <p>Renders de alta calidad para un catálogo de productos modernos, destacando texturas y materiales.</p>
                     </div>
 
                     <!-- PROYECTO 2: Ambiente/Interior -->
                     <div class="swiper-slide portfolio-item">
                         <img src="images/ambiente-cocina.png" alt="Render de Cocina Moderna">
-                        <h3>Diseño de Interiores</h3>
+                        <h3>Diseño Completo de Interiores</h3>
                         <p>Visualiza tu ambiente con acabados de lujo.</p>
                     </div>
 
